- Add MyVector2/3/4 struct -> class

--- a/lib/raylibCpp/CMakeLists.txt
+++ b/lib/raylibCpp/CMakeLists.txt
@@ -31,6 +31,9 @@ set(SRCS
     ./src/Text/Text.cpp
     ./src/Texture/Texture.cpp
     ./src/Window/Window.cpp
+    ./src/Data/MyVector/MyVector2.cpp
+    ./src/Data/MyVector/MyVector3.cpp
+    ./src/Data/MyVector/MyVector4.cpp
 )
 add_library(${NAME} SHARED ${SRCS})
 
