feat(CMakeLists.txt): add compilation of subdirectories for libs and change cpp version, from 11 to 17

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@
 
 cmake_minimum_required(VERSION 3.17)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(NAME bomberman)
 
@@ -28,6 +28,5 @@ set_target_properties(${NAME}
         )
 
 ## LIBS
-
-# TODO link game engine lib
-# TODO link raylibCpp lib
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/raylibCpp)
