--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,5 @@ set_target_properties(${NAME}
         )
 
 ## LIBS
-add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
+# add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/raylibCpp)
