--- a/lib/raylibCpp/CMakeLists.txt
+++ b/lib/raylibCpp/CMakeLists.txt
@@ -67,6 +67,8 @@ set(SRCS
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+
 add_library(${NAME} SHARED ${SRCS})
 
 ## LIB
