--- a/lib/gameEngine/CMakeLists.txt
+++ b/lib/gameEngine/CMakeLists.txt
@@ -21,7 +21,7 @@ include_directories(
 
 ## SOURCES
 set(SRCS
-    ./src/main.cpp
+#    ./src/main.cpp
     ./src/EntityContainer/EntityRegister.cpp
     ./src/Component/Component.cpp
     ./src/system/PhysicsSystem/PhysicsSystem.cpp
@@ -29,8 +29,7 @@ set(SRCS
     ./src/EntityManager/EntityManager.cpp
     ./src/SystemManager/SystemManager.cpp
         )
-#add_library(${NAME} SHARED ${SRCS})
-add_executable(${NAME} ${SRCS}) # DEBUG
 
-## LIB
-# TODO : load cpp raylib
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
+add_library(${NAME} SHARED ${SRCS})
+
