chore(game-core): Cmake, add raylib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,4 +30,11 @@ set_target_properties(${NAME}
 
 ## LIBS
 # add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
+
+## RAYLIB
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/raylibCpp)
+#add_library(raylibcpp SHARED IMPORTED)
+#set(RAYLIB_DIR ${PROJECT_SOURCE_DIR}/lib/raylibCpp)
+#set_property(TARGET raylibcpp PROPERTY IMPORTED_LOCATION "${RAYLIB_DIR}/libraylibcpp.so")
+#include_directories(${RAYLIB_DIR}/include)
+#target_link_libraries(${NAME} raylibcpp)
