feat(game-engine): AbstractScene and SceneManager classes

--- a/lib/gameEngine/CMakeLists.txt
+++ b/lib/gameEngine/CMakeLists.txt
@@ -21,15 +21,21 @@ include_directories(
 
 ## SOURCES
 set(SRCS
-#    ./src/main.cpp
-    ./src/EntityContainer/EntityRegister.cpp
-    ./src/Component/Component.cpp
-    ./src/system/PhysicsSystem/PhysicsSystem.cpp
-    ./src/AbstractSystem/AbstractSystem.cpp
-    ./src/EntityManager/EntityManager.cpp
-    ./src/SystemManager/SystemManager.cpp
-        )
+        src/EntityContainer/EntityRegister.cpp
+        src/Component/Component.cpp
+        src/systems/PhysicsSystem/PhysicsSystem.cpp
+        src/AbstractSystem/AbstractSystem.cpp
+        src/EntityManager/EntityManager.cpp
+        src/SystemManager/SystemManager.cpp
+        src/AbstractScene/AbstractScene.cpp
+        src/SceneManager/SceneManager.cpp
+)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 add_library(${NAME} SHARED ${SRCS})
 
+if(MSVC)
+    target_compile_options(${NAME} PRIVATE /W4 /WX)
+else()
+    target_compile_options(${NAME} PRIVATE -Wall -Wextra)
+endif()
