feat(game-core): main function and update cmakelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,26 +15,41 @@ project(${NAME} VERSION 0.1 LANGUAGES CXX)
 
 ## INCLUDES
 include_directories(./include)
+include_directories(./src)
 
 ## SOURCES
 set(SRCS
         ./src/main.cpp
+        ./src/Game/Core/Core.cpp
         ./src/Game/ProceduralMap/ProceduralMap.cpp
+        src/Components/Render3D/Render3D.cpp
+        src/Components/Render2D/Render2D.cpp
+        src/Systems/Render2D/Render2DSystem.cpp
+        src/Systems/Render3D/Render3DSystem.cpp
+        src/Scenes/DebugScene/DebugScene.cpp
         )
 add_executable(${NAME} ${SRCS})
+
+if (MSVC)
+    target_compile_options(${NAME} PRIVATE /W4 /WX)
+else ()
+    target_compile_options(${NAME} PRIVATE -Wall) # -Wextra
+endif ()
 
 set_target_properties(${NAME}
         PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}"
         )
 
-## LIBS
-# add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
+## GAME-ENGINE
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
+set(GAMEENGINE_DIR ${PROJECT_SOURCE_DIR}/lib/gameEngine)
+include_directories(${GAMEENGINE_DIR}/include)
+include_directories(${GAMEENGINE_DIR}/src)
+target_link_libraries(${NAME} gameEngine)
 
 ## RAYLIB
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/raylibCpp)
-#add_library(raylibcpp SHARED IMPORTED)
-#set(RAYLIB_DIR ${PROJECT_SOURCE_DIR}/lib/raylibCpp)
-#set_property(TARGET raylibcpp PROPERTY IMPORTED_LOCATION "${RAYLIB_DIR}/libraylibcpp.so")
-#include_directories(${RAYLIB_DIR}/include)
-#target_link_libraries(${NAME} raylibcpp)
+set(RAYLIB_DIR ${PROJECT_SOURCE_DIR}/lib/raylibCpp)
+include_directories(${RAYLIB_DIR}/include)
+target_link_libraries(${NAME} raylibcpp)
