--- a/bomberman.config
+++ b/bomberman.config
@@ -7,3 +7,15 @@
 "BONUS_POURCENT": 5
 "EMPTY_POURCENT": 30
 "SOFT__POURCENT": 65
+
+"MAP_CONFIG": [
+    [12, 12, 12],
+    [12, 12, 12],
+    [12, 12, 12],
+]
+
+"TEST": [
+    12,
+    12,
+    12
+]
