--- a/lib/gameEngine/CMakeLists.txt
+++ b/lib/gameEngine/CMakeLists.txt
@@ -7,6 +7,9 @@
 
 cmake_minimum_required(VERSION 3.17)
 
+#set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_BUILD_TYPE Debug)
+
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(NAME gameEngine)
@@ -15,8 +18,8 @@ project(${NAME} VERSION 0.1 LANGUAGES CXX)
 
 ## INCLUDES
 include_directories(
-    ./include
-    ./src/
+        ./include
+        ./src/
 )
 
 ## SOURCES
@@ -31,13 +34,13 @@ set(SRCS
         src/AbstractScene/AbstractScene.cpp
         src/SceneManager/SceneManager.cpp
         ./src/SaveManager/SaveManager.cpp
-)
+        )
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 add_library(${NAME} SHARED ${SRCS})
 
-if(MSVC)
+if (MSVC)
     target_compile_options(${NAME} PRIVATE /W4 /WX)
-else()
+else ()
     target_compile_options(${NAME} PRIVATE -Wall -Wextra)
-endif()
+endif ()
