--- a/bomberman.config
+++ b/bomberman.config
@@ -21,3 +21,23 @@
     [1, 2, 0, 2, 0, 2, 0, 2, 0, 2, 0, 2, 0, 2, 0, 2, 1],
     [1, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 1, 1],
 ]
+
+## EXEMPLE
+
+"VECTOR_TWO": {
+    "a": 3
+    "b": 4
+}
+
+"VECTOR_THREE": {
+    "a": 3
+    "b": 4
+    "c": 5
+}
+
+"VECTOR_THREE": {
+    "a": 3
+    "b": 4
+    "c": 5
+    "d": 6
+}
