Fix CMakeList gameEngine organisation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,15 +19,15 @@ include_directories(./src)
 
 ## SOURCES
 set(SRCS
-        ./src/main.cpp
-        ./src/Game/Core/Core.cpp
-        ./src/Game/ProceduralMap/ProceduralMap.cpp
-        src/Components/Render3D/Render3D.cpp
-        src/Components/Render2D/Render2D.cpp
-        src/Systems/Render2D/Render2DSystem.cpp
-        src/Systems/Render3D/Render3DSystem.cpp
-        src/Scenes/DebugScene/DebugScene.cpp
-        )
+    src/main.cpp
+    src/Game/Core/Core.cpp
+    src/Game/ProceduralMap/ProceduralMap.cpp
+    src/Components/Render3D/Render3D.cpp
+    src/Components/Render2D/Render2D.cpp
+    src/Systems/Render2D/Render2DSystem.cpp
+    src/Systems/Render3D/Render3DSystem.cpp
+    src/Scenes/DebugScene/DebugScene.cpp
+)
 add_executable(${NAME} ${SRCS})
 
 if (MSVC)
@@ -37,9 +37,9 @@ else ()
 endif ()
 
 set_target_properties(${NAME}
-        PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}"
-        )
+    PROPERTIES
+    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}"
+)
 
 ## GAME-ENGINE
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
