- Add exemple MyVector

--- a/bomberman.config
+++ b/bomberman.config
@@ -31,13 +31,13 @@
 
 "VECTOR_THREE": {
     "a": 3
-    "b": 4
+    "b": 434
     "c": 5
 }
 
-"VECTOR_THREE": {
+"VECTOR_FOUR": {
     "a": 3
-    "b": 4
+    "b": 4345
     "c": 5
     "d": 6
 }
