--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,20 @@ include_directories(./src)
 
 ## SOURCES
 set(SRCS
+    # Core
     src/main.cpp
     src/Game/Core/Core.cpp
     src/Game/ProceduralMap/ProceduralMap.cpp
-    src/Components/Render3D/Render3D.cpp
-    src/Components/Render2D/Render2D.cpp
+    # Scenes
+    src/Scenes/DebugScene/DebugScene.cpp
+    # Systems
     src/Systems/Render2D/Render2DSystem.cpp
     src/Systems/Render3D/Render3DSystem.cpp
-    src/Scenes/DebugScene/DebugScene.cpp
+    src/Systems/Hitbox/HitboxSystem.cpp
+    # Components
+    src/Components/Render3D/Render3D.cpp
+    src/Components/Render2D/Render2D.cpp
+    src/Components/Hitbox/Hitbox.cpp
 )
 add_executable(${NAME} ${SRCS})
 
