--- a/bomberman.config
+++ b/bomberman.config
@@ -22,6 +22,30 @@
     [1, 1, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 1, 1],
 ]
 
+## CORE
+
+"WIN_SIZE": {
+    "a": 800
+    "b": 600
+}
+"WIN_TITLE": "BomberBlock"
+"WIN_BACK": 22              #RColor::RBLACK
+"CAM_POSITION": {
+    "a": 300
+    "b": 0
+    "c": 100
+}
+"CAM_TARGET": {
+    "a": 0
+    "b": 0
+    "c": 0
+}
+"CAM_UP": {
+    "a": 0
+    "b": 1
+    "c": 0
+}
+
 ## EXEMPLE
 
 "VECTOR_TWO": {
