chore(game-core): update cmakelist sources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,22 +19,29 @@ include_directories(./src)
 
 ## SOURCES
 set(SRCS
-    # Core
-    src/main.cpp
-    src/Game/Core/Core.cpp
-    src/Game/ProceduralMap/ProceduralMap.cpp
-    src/ConfigFile/ConfigFile.cpp
-    src/Exceptions/Exceptions.cpp
-    # Scenes
-    src/Scenes/DebugScene/DebugScene.cpp
-    # Systems
-    src/Systems/Render2D/Render2DSystem.cpp
-    src/Systems/Render3D/Render3DSystem.cpp
-    src/Systems/Hitbox/HitboxSystem.cpp
-    # Components
-    src/Components/Render3D/Render3D.cpp
-    src/Components/Render2D/Render2D.cpp
-    src/Components/Hitbox/Hitbox.cpp
+        src/main.cpp
+        # GAME
+        src/Game/Core/Core.cpp
+        src/Game/ProceduralMap/ProceduralMap.cpp
+        src/Game/EventRequirement/EventRequirement.cpp
+        src/ConfigFile/ConfigFile.cpp
+        src/Exceptions/Exceptions.cpp
+        # COMPONENTS
+        src/Components/Render3D/Render3D.cpp
+        src/Components/Render2D/Render2D.cpp
+        src/Components/AbstractEvent/AbstractEvent.cpp
+        src/Components/Hitbox/Hitbox.cpp
+        # SYSTEMS
+        src/Systems/Render2D/Render2DSystem.cpp
+        src/Systems/Render3D/Render3DSystem.cpp
+        src/Systems/Hitbox/HitboxSystem.cpp
+        # SCENES
+        src/Scenes/DebugScene/DebugScene.cpp
+        src/Scenes/SceneWithEvents/SceneWithEvents.cpp
+        # CONFIG
+        src/ConfigFile/ConfigFile.cpp
+        # EXCEPTION
+        src/Exceptions/Exceptions.cpp
 )
 add_executable(${NAME} ${SRCS})
 
