--- a/lib/raylibCpp/CMakeLists.txt
+++ b/lib/raylibCpp/CMakeLists.txt
@@ -53,7 +53,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 
-add_library(${NAME} SHARED ${SRCS})
+add_library(${NAME} ${SRCS})
 
 ## LIB
 
