--- a/.github/workflows/compilation.yaml
+++ b/.github/workflows/compilation.yaml
@@ -79,9 +79,9 @@ jobs:
         working-directory: build
         run: cmake ..
 
-      - name: Run make
+      - name: Build Project
         working-directory: build
-        run: make
+        run: cmake --build .
 
       - name: Check if binary exist
         run: ls bomberman
@@ -104,6 +104,10 @@ jobs:
       - name: Run cmake
         working-directory: ${{ env.PROJECT_RAYLIBCPP }}/build
         run: cmake ..
+
+      - name: Build Project
+        working-directory: ${{ env.PROJECT_RAYLIBCPP }}/build
+        run: cmake --build .
 
       - name: Check if binary exist
         working-directory: ${{ env.PROJECT_RAYLIBCPP }}/build
