feat(game-core): entity factory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,9 @@ set(SRCS
         src/Game/EventRequirement/EventRequirement.cpp
         src/ConfigFile/ConfigFile.cpp
         src/Exceptions/Exceptions.cpp
+        ## GAME/FACTORIES
+        src/Game/Factories/ButtonFactory.cpp
+        src/Game/EntityFactory/EntityFactory.cpp
         # COMPONENTS
         src/Components/Render3D/Render3D.cpp
         src/Components/Render2D/Render2D.cpp
