feat(src/Components/ClickEvent.cpp): add factory for button

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,8 @@ set(SRCS
         src/ConfigFile/ConfigFile.cpp
         # EXCEPTION
         src/Exceptions/Exceptions.cpp
-)
+        src/Components/ClickEvent.cpp)
+
 add_executable(${NAME} ${SRCS})
 
 if (MSVC)
@@ -58,9 +59,9 @@ else ()
 endif ()
 
 set_target_properties(${NAME}
-    PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}"
-)
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}"
+        )
 
 ## GAME-ENGINE
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/gameEngine/)
