--- a/bomberman.config
+++ b/bomberman.config
@@ -46,6 +46,15 @@
     "c": 0
 }
 
+## IA
+
+"IA_SEED": 42 # Comment this line for random seed
+"IA_RANDOM_PROB": 0 # Probability of random choice
+"IA_EXPLOSION_RANGE": 6
+"IA_INTERNAL_DEFAULT_VALUE": -1 # Must be negativ, else side effect
+"IA_BOMBE_PROB": 7 # 1/IA_BOMBE_PROB
+
+
 ## EXEMPLE
 
 "VECTOR_TWO": {
