--- a/bomberman.config
+++ b/bomberman.config
@@ -46,6 +46,18 @@
     "c": 0
 }
 
+"CHECKBOX_SIZE": {
+    "a": 50
+    "b": 50
+}
+"CHECKBOX_OUTLINE": {
+    "a": 50
+    "b": 50
+}
+"CHECKBOX_OUTLINE_COLOR": 21
+"CHECKBOX_ENABLE_COLOR": 9
+"CHECKBOX_DISABLE_COLOR": 7
+
 ## EXEMPLE
 
 "VECTOR_TWO": {
