--- a/bomberman.config
+++ b/bomberman.config
@@ -46,6 +46,18 @@
     "c": 0
 }
 
+## GUI
+
+"STANDARD_FONT": "Asset/Font/MinecraftRegular.ttf"
+"STANDARD_FONT_SIZE": 20
+
+"STANDARD_IDLE_BUTTON_TEXTURE": "Asset/Interface/Button.png"
+"STANDARD_HOVER_BUTTON_TEXTURE": "Asset/Interface/HoverButton.png"
+"STANDARD_CLICKED_BUTTON_TEXTURE": "Asset/Interface/Button.png"
+"STANDARD_UNAVAILABLE_BUTTON_TEXTURE": "Asset/Interface/UnavailableButton.png"
+
+
+
 ## EXEMPLE
 
 "VECTOR_TWO": {
