fix(core): cmakelist

--- a/lib/gameEngine/CMakeLists.txt
+++ b/lib/gameEngine/CMakeLists.txt
@@ -29,8 +29,7 @@ set(SRCS
     src/AbstractSystem/AbstractSystem.cpp
     src/Systems/PhysicsSystem/PhysicsSystem.cpp
     src/Systems/TimerSystem/TimerSystem.cpp
-    src/Systems/
-    # Entities
+    # Factories
     src/EntityContainer/EntityRegister.cpp
     src/EntityManager/EntityManager.cpp
     # Components
