--- a/bomberman.config
+++ b/bomberman.config
@@ -74,3 +74,19 @@
     "c": 5
     "d": 6
 }
+
+## DEFAULT
+
+"DEF_FONT": "/Asset/Font/MinecraftRegular.ttf"
+"DEF_FONT_SIZE": 40
+
+
+### ENTITIES
+
+# TIMER
+"TIMER_TEXTURE": "/Asset/Texture/Plains/SoftBlock/Cobblestone.png"
+"TIMER_COLOR": 22 # BLACK
+"TIMER_SIZE": {
+    "a": 100
+    "b": 300
+}
