- Add start of Block

--- a/bomberman.config
+++ b/bomberman.config
@@ -55,22 +55,15 @@
 "IA_BOMBE_PROB": 7 # 1/IA_BOMBE_PROB
 
 
-## EXEMPLE
+## BLOCK
 
-"VECTOR_TWO": {
-    "a": 3
-    "b": 4
+"DEFAULT_BLOCK_SIZE": {
+    "a": 50
+    "b": 50
+    "c": 50
 }
 
-"VECTOR_THREE": {
-    "a": 3
-    "b": 434
-    "c": 5
-}
-
-"VECTOR_FOUR": {
-    "a": 3
-    "b": 4345
-    "c": 5
-    "d": 6
-}
+"BLOCK_MODEL": ""
+"BLOCK_SOFT_TEXTURE": ""
+"BLOCK_HARD_TEXTURE": ""
+"BLOCK_FLOOR_TEXTURE": ""
