- Add correct parameters in configFile

--- a/bomberman.config
+++ b/bomberman.config
@@ -63,7 +63,7 @@
     "c": 50
 }
 
-"BLOCK_MODEL": ""
-"BLOCK_SOFT_TEXTURE": ""
-"BLOCK_HARD_TEXTURE": ""
-"BLOCK_FLOOR_TEXTURE": ""
+"BLOCK_MODEL": "Asset/Model/Model_Bomb/Model_Bomb.obj"
+"BLOCK_SOFT_TEXTURE": "Asset/Texture/HardBlock/Obsidian.png"
+"BLOCK_HARD_TEXTURE": "Asset/Texture/End/Ground/EndStone.png"
+"BLOCK_FLOOR_TEXTURE": "Asset/Texture/End/Ground/EndStone.png"
