--- a/bomberman.config
+++ b/bomberman.config
@@ -64,6 +64,9 @@
 }
 
 "BLOCK_MODEL": "Asset/Model/Model_Bomb/Model_Bomb.obj"
-"BLOCK_SOFT_TEXTURE": "Asset/Texture/HardBlock/Obsidian.png"
-"BLOCK_HARD_TEXTURE": "Asset/Texture/End/Ground/EndStone.png"
+"BLOCK_SOFT_TEXTURE": ""Asset/Texture/SoftBlock/Obsidian.png""
+"BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/Bedrock.png"
+"BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/TntSide.png"
+"BLOCK_BLAST_TEXTURE": "Asset/Texture/Bomb/Fire/Fire17.png"
 "BLOCK_FLOOR_TEXTURE": "Asset/Texture/End/Ground/EndStone.png"
+"BLOCK_DEFAULT_TEXTURE": "Asset/Texture/Bomb/TntBottom.png"
