fix(src/GUI/Factories/Button/ButtonFactory.?pp): change button handler and what's arround (EventRequirement::triggerKey causes a segv) and button is now clicked correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ set(SRCS
         src/ConfigFile/ConfigFile.cpp
         # EXCEPTION
         src/Exceptions/Exceptions.cpp
-        src/Components/Render2D/ARender2D.cpp src/Components/Render2D/ARender2D.hpp)
+        src/Components/Render2D/ARender2D.cpp src/Components/Render2D/ARender2D.hpp src/Components/MouseMoveEvent.cpp)
 
 add_executable(${NAME} ${SRCS})
 
