--- a/bomberman.config
+++ b/bomberman.config
@@ -60,6 +60,19 @@
 "CHECKBOX_ENABLE_COLOR": 22
 "CHECKBOX_DISABLE_COLOR": 21
 
+## Slider
+
+"SLIDER_SIZE": {
+    "a": 150
+    "b": 50
+}
+"SLIDER_BACKGROUND_COLOR": 1
+"SLIDER_SELECTOR_SIZE": {
+    "a": 20
+    "b": 20
+}
+"SLIDER_SELECTOR_COLOR": 21
+
 ## IA
 
 "IA_SEED": 42 # Comment this line for random seed
