- Add bonus arch && - Add bonus todo

--- a/bomberman.config
+++ b/bomberman.config
@@ -83,6 +83,10 @@
 "BLOCK_BLAST_TEXTURE": "Asset/Texture/Bomb/Fire/Fire17.png"
 "BLOCK_FLOOR_TEXTURE": "Asset/Texture/End/Ground/EndStone.png"
 "BLOCK_DEFAULT_TEXTURE": "Asset/Texture/Bomb/TntBottom.png"
+"BLOCK_BONUS_BOOMUP_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
+"BLOCK_BONUS_FIREUP_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
+"BLOCK_BONUS_SPEEDUP_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
+"BLOCK_BONUS_WALLPASS_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
 
 ## DEFAULT
 
