--- a/bomberman.config
+++ b/bomberman.config
@@ -80,7 +80,7 @@
 "BLOCK_SOFT_TEXTURE": ""Asset/Texture/SoftBlock/Obsidian.png""
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/Bedrock.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/"
-"BLOCK_BLAST_TEXTURE": "Asset/Texture/Bomb/Fire/Fire17.png"
+"BLOCK_BLAST_TEXTURE": "Asset/Texture/Bomb/Fire/"
 "BLOCK_FLOOR_TEXTURE": "Asset/Texture/End/Ground/EndStone.png"
 "BLOCK_DEFAULT_TEXTURE": "Asset/Texture/Bomb/TntBottom.png"
 "BLOCK_BONUS_BOOMUP_TEXTURE": "Asset/Texture/Mob/Cow.png" # TODO EDIT WITH BONUS TEXTURE PASS
@@ -105,4 +105,5 @@
 
 ## GAME
 
-"BLAST_DURATION": 5000 # time in millisecond (negativ value will replace by 0)
+"BLAST_DURATION": 5 # time in second (negativ value will replace by 0)
+"BOMB_COUNTDOWN": 3 # time in second (negativ value will replace by 0)
