Add slider label

--- a/bomberman.config
+++ b/bomberman.config
@@ -72,6 +72,9 @@
     "b": 50
 }
 "SLIDER_SELECTOR_COLOR": 21
+"SLIDER_LABEL_COLOR": 2
+"SLIDER_LABEL_SIZE": 1
+"SLIDER_LABEL_FONT": "Asset/Font/MinecraftRegular.ttf"
 
 ## IA
 
