- Add component map

--- a/bomberman.config
+++ b/bomberman.config
@@ -107,3 +107,4 @@
 
 "BLAST_DURATION": 5 # time in second (negativ value will replace by 0)
 "BOMB_COUNTDOWN": 3 # time in second (negativ value will replace by 0)
+"RANDOM_BONUS": [10, 10, 10, 70] # comment this tab if you want equal prob of bonus else set tab of 4 value, additions of these must make 100
