fix(core): in audio factory, wrong audio types

--- a/bomberman.config
+++ b/bomberman.config
@@ -108,6 +108,8 @@
 
 "DEF_FONT": "/Asset/Font/MinecraftRegular.ttf"
 "DEF_FONT_SIZE": 40
+"DEF_SOUND_VOLUME": 1.0
+"DEF_SOUND_PITCH": 0.5
 
 ### ENTITIES
 
