--- a/bomberman.config
+++ b/bomberman.config
@@ -103,7 +103,7 @@
 }
 
 "BLOCK_MODEL": "Asset/Model/Model_Bomb/Model_Bomb.obj"
-"BLOCK_SOFT_TEXTURE": ""Asset/Texture/SoftBlock/Obsidian.png""
+"BLOCK_SOFT_TEXTURE": "Asset/Texture/SoftBlock/Obsidian.png"
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/Bedrock.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/"
 "BLOCK_BLAST_TEXTURE": "Asset/Texture/Bomb/Fire/"
@@ -116,7 +116,7 @@
 
 ## DEFAULT
 
-"DEF_FONT": "/Asset/Font/MinecraftRegular.ttf"
+"DEF_FONT": "Asset/Font/MinecraftRegular.ttf"
 "DEF_FONT_SIZE": 40
 
 ### ENTITIES
