--- a/bomberman.config
+++ b/bomberman.config
@@ -31,14 +31,14 @@
 "WIN_TITLE": "BomberBlock"
 "WIN_BACK": 22              #RColor::RBLACK
 "CAM_POSITION": {
-    "a": 10
-    "b": 10
-    "c": 10
+    "a": 32
+    "b": 8
+    "c": 32
 }
 "CAM_TARGET": {
-    "a": 0
-    "b": 0
-    "c": 0
+    "a": 34
+    "b": 8
+    "c": 3
 }
 "CAM_UP": {
     "a": 0
@@ -71,13 +71,13 @@
 ## BLOCK
 
 "DEFAULT_BLOCK_SIZE": {
-    "a": 50
-    "b": 50
-    "c": 50
+    "a": 3
+    "b": 3
+    "c": 3
 }
 
 "BLOCK_MODEL": "Asset/Model/Model_Bomb/Model_Bomb.obj"
-"BLOCK_SOFT_TEXTURE": ""Asset/Texture/SoftBlock/Obsidian.png""
+"BLOCK_SOFT_TEXTURE": "Asset/Texture/End/SoftBlock/Obsidian.png"
 "BLOCK_HARD_TEXTURE": "Asset/Texture/HardBlock/Bedrock.png"
 "BLOCK_BOMB_TEXTURE": "Asset/Texture/Bomb/"
 "BLOCK_BLAST_TEXTURE": "Asset/Texture/Bomb/Fire/"
