feat(src/Scenes/PauseMenuScene/PauseMenuScene.?pp): add scene for menu, initialized and instanciated, it can be lauched but needs to be filled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ set(SRCS
         src/ConfigFile/ConfigFile.cpp
         # EXCEPTION
         src/Exceptions/Exceptions.cpp
-        )
+        src/Scenes/PauseMenuScene/PauseMenuScene.cpp src/Scenes/PauseMenuScene/PauseMenuScene.hpp)
 
 add_executable(${NAME} ${SRCS})
 
