WIP: Adding KeyBindingMenu

--- a/bomberman.config
+++ b/bomberman.config
@@ -138,3 +138,33 @@
 "BLAST_DURATION": 5 # time in second (negativ value will replace by 0)
 "BOMB_COUNTDOWN": 3 # time in second (negativ value will replace by 0)
 "RANDOM_BONUS": [10, 10, 10, 70] # comment this tab if you want equal prob of bonus else set tab of 4 value, additions of these must make 100
+
+## KeyBindings
+
+"PLAYER_ONE_MOVE_UP": 26
+"PLAYER_ONE_MOVE_DOWN": 19
+"PLAYER_ONE_MOVE_LEFT": 17
+"PLAYER_ONE_MOVE_RIGHT": 4
+"PLAYER_ONE_MOVE_PAUSE": 23
+"PLAYER_ONE_MOVE_PLACE_BOMB": 71
+
+"PLAYER_TWO_MOVE_UP": 37
+"PLAYER_TWO_MOVE_DOWN": 38
+"PLAYER_TWO_MOVE_LEFT": 40
+"PLAYER_TWO_MOVE_RIGHT": 39
+"PLAYER_TWO_MOVE_PAUSE": 51
+"PLAYER_TWO_MOVE_PLACE_BOMB": 73
+
+"PLAYER_THREE_MOVE_UP": 15
+"PLAYER_THREE_MOVE_DOWN": 12
+"PLAYER_THREE_MOVE_LEFT": 11
+"PLAYER_THREE_MOVE_RIGHT": 13
+"PLAYER_THREE_MOVE_PAUSE": 16
+"PLAYER_THREE_MOVE_PLACE_BOMB": 42
+
+"PLAYER_FOUR_MOVE_UP": 85
+"PLAYER_FOUR_MOVE_DOWN": 79
+"PLAYER_FOUR_MOVE_LEFT": 81
+"PLAYER_FOUR_MOVE_RIGHT": 83
+"PLAYER_FOUR_MOVE_PAUSE": 77
+"PLAYER_FOUR_MOVE_PLACE_BOMB": 82
