--- a/bomberman.config
+++ b/bomberman.config
@@ -108,7 +108,7 @@
 
 ## DEFAULT
 
-"DEF_FONT": "./Asset/Font/MinecraftRegular.ttf"
+"DEF_FONT": "Asset/Font/MinecraftRegular.ttf"
 "DEF_FONT_SIZE": 40
 
 ### ENTITIES
