feat(src/Scenes/) add MainMenu Scene start of Options Menu Scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ set(SRCS
         # SCENES
         src/Scenes/DebugScene/DebugScene.cpp
         src/Scenes/MainMenu/MainMenuScene.cpp
+        src/Scenes/OptionsMenu/OptionsMenuScene.cpp
         src/Scenes/SceneWithEvents/SceneWithEvents.cpp
         src/Scenes/SplashScreen/SplashScreenScene.cpp
         src/Scenes/PauseMenuScene/PauseMenuScene.cpp
