--- a/bomberman.config
+++ b/bomberman.config
@@ -27,9 +27,14 @@
 ## CORE
 
 "WIN_SIZE": {
-    "a": 800
-    "b": 600
+"a": 1280
+"b": 720
 }
+
+#"WIN_SIZE": {
+#    "a": 1920
+#    "b": 1080
+#}
 "WIN_TITLE": "BomberBlock"
 "WIN_BACK": 22              #RColor::RBLACK
 "CAM_POSITION": {
